[tool.poetry]
name = "comfymath"
version = "0.1.0"
description = "Math nodes for ComfyUI"
authors = ["Evan Spearman <evan@spearman.mb.ca>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
qdrant-client = "^1.4.0"
tqdm = "^4.66.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
